--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             <div id="namerator" class="disabled panes">
                 <div id="namerator_names">
                 </div>
-                <button class="button" onclick="namerator_gen();">Generate Name</button>
+                <button class="button" id="namerator_gen_button" onclick="namerator_gen();">Generate Name</button>
             </div>
             <div id="loading" class="disabled panes">
                 <span class="bigtext" id="loadtext">Getting some information...</span>
